Update title and content in index.html
salom

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akbarbek</title>
+    <title>Karimov</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -18,4 +18,5 @@
     <div class="box-9">box-9</div>
     <div class="box-10">box-10</div>
 </body>
+
 </html>
