--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akbarbek:)2012</title>
+    <title>Karimov:)2012</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -20,5 +20,6 @@
 </body>
 
 </html>
+
 
 
